# undertand-book

./: .env.example  .gitignore  .npmrc  CONTEXT.md  Cargo.toml  LICENSE  README.md  SESSION_CHECKPOINT.md  package.json  pnpm-lock.yaml  start.bat  参考.md  需求文档-V2.md  需求文档-V3.md  需求文档.md
.claude-plugin/: plugin.json
agents/: discourse-index-extractor.md  pass1-local-extractor.md  pass2-longrange-linker.md  profile-sidecar-extractor.md
crates/base-schema/: Cargo.toml
crates/memory/: Cargo.toml
crates/read-tools/: Cargo.toml
crates/reader/: Cargo.toml
crates/runtime/: Cargo.toml
crates/runtime/goldset/: game-programming-patterns.json
crates/runtime/src/: goldset.rs  lib.rs  main.rs  memory.rs  orchestrator.rs
crates/server/: Cargo.toml
crates/server/src/: lib.rs  main.rs
docs/: PB3-pass2-prompt-grill.md  code-trail-S12-continuous-reader.md  spec体检报告.md  代码链路.md  切片方案-S12连续滚动阅读模型.md  切片方案-asset一等对象.md  切片方案-profile深路径.md  切片方案-切片0样板间.md  切片方案-切片1前端阅读器.md  参考对照-文档世界状态-优化登记.md  实测-S2窗口利用率.md  实测-S3小规模锚定率.md  导读-知识图谱与LID的关系.md  技术方案-架构蓝图.md
docs/adr/: 0001-本地plugin形态.md  0002-图谱中心-砍向量索引.md  0003-读时架构-独立阅读器-可插拔LLM后端.md  0004-引用红线分层.md  0005-模块E存续重定义为读时书agent.md  0006-E记忆层-用户私有跨书两层隔离.md  0007-阅读器命令优先-agent可驱动.md  0008-LID切分-纯确定性-句级独立层-忠实块映射-分区不变式.md  0009-窗口批次切分-LID子树窗口-双约束预算-subagent并发-边界选择性重叠.md  0010-语义边两遍抽取-双agent-硬屏障-全量目录优先-确定性投影-锚定基数分裂.md  0011-确定性图谱闸-纯确定性收口-悬空丢不重建-最小连坐-按类型合并-边作召回路标.md  0012-语境胶囊降格-读时确定性投影-砍物化产物.md  0013-book.context三档投影-near-mid-far确定性遍历-累积分层-topK截断.md  0014-命令面分层-确定性叶子工具-LLM命令即运行时暴露-book命令签名定型.md  (+29 more)
skills/read/: SKILL.md
(+7 files in other folders)
