[package]
name = "runtime"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
base-schema = { path = "../base-schema" }
read-tools = { path = "../read-tools" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", features = ["json"] }
dotenvy = "0.15"
