[package]
name = "server"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
read-tools = { path = "../read-tools" }
reader = { path = "../reader" }
memory = { path = "../memory" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tiny_http = "0.12"

[dev-dependencies]
base-schema = { path = "../base-schema" }
